--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ROCK-PAPER-SCISSORS</title>
-    <link rel="stylesheet" href="/Rock-Paper-Scissor/styles/rock-paper-scissor.css">
+    <link rel="stylesheet" href="/styles/rock-paper-scissor.css">
   </head>
 
   <body>
     <p class="title">ROCK PAPER SCISSORS</p>
     <button
-      onclick="playGame('Rock');" class="move-button"><img src="/Rock-Paper-Scissor/Images/rock-emoji.png" class="move-icon">
+      onclick="playGame('Rock');" class="move-button"><img src="/Images/rock-emoji.png" class="move-icon">
     </button>
 
     <button
-      onclick="playGame('Paper');" class="move-button"><img src="/Rock-Paper-Scissor/Images/paper-emoji.png" class="move-icon">
+      onclick="playGame('Paper');" class="move-button"><img src="/Images/paper-emoji.png" class="move-icon">
     </button>
 
     <button
-      onclick="playGame('Scissor');" class="move-button"><img src="/Rock-Paper-Scissor/Images/scissor-emoji.png" class="move-icon">
+      onclick="playGame('Scissor');" class="move-button"><img src="/Images/scissor-emoji.png" class="move-icon">
     </button>
     <p class="js-result result"></p>
     <p class="js-moves">
@@ -31,6 +31,6 @@
     score.tied=0;
     localStorage.removeItem('score');
     updateScoreElement();">Reset Score</button>
-    <script src="/Rock-Paper-Scissor/scripts/rock-paper-scissor.js"></script>
+    <script src="/scripts/rock-paper-scissor.js"></script>
   </body>
 </html>
